--- a/js-examples/1-variables/index.html
+++ b/js-examples/1-variables/index.html
@@ -21,19 +21,19 @@
       //Variables are like boxes that can contain data.
       //they can change value during the program.
       //Variables are declared with the "var" keyword.
-      //also with "let", or with "const" if they are not supposed to change content.
-      //They are not hold in memory until they are assigned a value.
+      //also with "let", that bring some improvments.
+      //"const" is used if they are not supposed to change value.
       var a;
-      var b;
-      var c;
+      let b;
+      let c;
       a = 1;
       b = 2;
       c = a + b;
       console.log(c);
 
-      //Variables can be decalred and assigned at the same time.
+      //Variables can be declared and assigned at the same time.
       //This is called "declaration and assignment".
-      //Variables types can be: number, string or boolean.
+      //Variables types can be number, string, or boolean.
 
       var name = "John"; //Strings are sequences of characters, They are surrounded by quotes.
       var age = 30;
@@ -45,7 +45,7 @@
       console.log("Married: " + isMarried);
       console.log("===========================");
 
-      //Another important type of variable is array
+      //Another important type of variables is array
       //an array holds a list of items
       var cars = ["BMW", "Mercedes", "Audi"];
       console.log("===========================");
